services/harbor/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
  annotations:
    argocd.argoproj.io/sync-wave: '-10'
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
