services/harbor/resources/database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: harbor-postgresql
  namespace: harbor
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
spec:
  serviceName: harbor-postgresql
  replicas: 1
  selector:
    matchLabels: &id001
      app: harbor-postgresql
  template:
    metadata:
      labels: *id001
    spec:
      securityContext:
        runAsUser: 999
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
      automountServiceAccountToken: false
      containers:
      - name: database
        image: goharbor/harbor-db:v2.15.2
        ports:
        - containerPort: 5432
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            memory: 1Gi
        readinessProbe:
          exec:
            command:
            - /docker-healthcheck.sh
          initialDelaySeconds: 20
          timeoutSeconds: 5
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
        - name: shm
          mountPath: /dev/shm
      volumes:
      - name: shm
        emptyDir:
          medium: Memory
          sizeLimit: 512Mi
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: yihao-local
      resources:
        requests:
          storage: 5Gi
      volumeMode: Filesystem
    apiVersion: v1
    kind: PersistentVolumeClaim
