services/harbor/resources/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor-postgresql
  namespace: harbor
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
spec:
  selector:
    app: harbor-postgresql
  ports:
  - port: 5432
    targetPort: 5432
